# skill-optimizer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.agents/skills/plan/: SKILL.md
.agents/skills/refactor/: SKILL.md
.agents/skills/tdd/: SKILL.md  deep-modules.md  interface-design.md  mocking.md  refactoring.md  tests.md
.claude-plugin/: marketplace.json  plugin.json
skills/agent-tool-builder/: SKILL.md
skills/agent-tool-builder/.claude-plugin/: plugin.json
skills/agent-tool-builder/assets/templates/: agent_tool.py.template
skills/agent-tool-builder/references/: interface-contract.md  patterns.md  pep723.md  perf-findings.md  single-turn-design.md
skills/agent-tool-builder/scripts/: init_tool.py  perf_check.py  validate_agent_tool.py
skills/agent-tool-builder/tests/: test_init_tool.py  test_perf_check.py  test_validate_agent_tool.py
skills/skill-optimizer/: SKILL.md
skills/skill-optimizer/assets/schemas/: eval-queries.schema.json  frontmatter.schema.json
skills/skill-optimizer/assets/templates/: SKILL.md.template  eval-queries.json.template  script.py.template
skills/skill-optimizer/references/: content-patterns.md  cross-skill-design.md  description-guide.md  evaluation.md  security.md  specification.md
skills/skill-optimizer/scripts/: analyze_skill.py  audit_security.py  count_tokens.py  detect_skill_overlap.py  eval_triggers.py  init_skill.py  optimize_description.py  perf_check.py  recommend_scripts.py  skill_lib.py  validate_skill.py
skills/skill-optimizer/scripts/tests/: conftest.py  test_analyze_skill.py  test_audit_security.py  test_recommend_scripts.py  test_skill_lib.py  test_validate_skill.py
