[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "skill-optimizer"
version = "2.0"
requires-python = ">=3.14"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade — language-upgrade checks
    "FA",   # flake8-future-annotations — modernization of __future__ usage
    "FURB", # refurb — additional modernization suggestions
    "TC",   # flake8-type-checking — TYPE_CHECKING import discipline
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security)
    "PTH",  # flake8-use-pathlib
    "PERF", # perflint
    "TRY",  # tryceratops
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint
]
ignore = [
    "S102",    # use of exec — intentional in profile_script
    "T201",    # print — this is a CLI tool
    "TRY003",  # long exception messages
    "PLR2004", # magic value comparisons
    "PLR0911", # too many return statements — main() CLI dispatch has many early returns
    "PLR0912", # too many branches — AST visitors are inherently branchy
    "PLR0913", # too many arguments
    "PLR0915", # too many statements — main() is CLI dispatch, inherently wordy
]

[tool.ruff.lint.per-file-ignores]
"skills/skill-optimizer/scripts/perf_check.py" = [
    "ERA001",  # noqa comments are intentional
    "RUF001",  # × in user-facing messages is intentional (multiplication sign)
    "N802",    # visit_* method names are required by ast.NodeVisitor API
]
"skills/skill-optimizer/scripts/count_tokens.py" = [
    "PLC0415",  # lazy import of anthropic is intentional — avoids import cost on heuristic path
]
"skills/skill-optimizer/scripts/skill_lib.py" = [
    "PLE2502", # intentional BiDi chars — this IS the blocklist being defined
]
"skills/skill-optimizer/scripts/eval_triggers.py" = [
    "S603",    # subprocess calls the claude CLI — trusted, controlled input
]
"skills/skill-optimizer/scripts/optimize_description.py" = [
    "S603",    # subprocess calls the claude CLI — trusted, controlled input
]
"skills/skill-optimizer/scripts/tests/*.py" = [
    "S101",    # assert is correct in tests
    "S603",    # subprocess calls in tests use controlled, trusted input
    "PLE2502", # BiDi chars in test strings are the inputs being tested
]
"skills/agent-tool-builder/scripts/perf_check.py" = [
    "ERA001",  # noqa comments are intentional
    "RUF001",  # × in user-facing messages is intentional (multiplication sign)
    "N802",    # visit_* method names are required by ast.NodeVisitor API
    "TRY300",  # return before except is intentional — matches skill-optimizer pattern
]
"skills/agent-tool-builder/tests/*.py" = [
    "S101",    # assert is correct in tests
    "S603",    # subprocess calls in tests use controlled, trusted input
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false   # pstats.Stats.stats is untyped; suppress globally
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
show_error_codes = true
